fix borders that are too light due to change in color var

--- a/assets/stylesheets/permitting/page-layouts.scss
+++ b/assets/stylesheets/permitting/page-layouts.scss
@@ -64,9 +64,8 @@
   margin-bottom: 8rem;
 
   .step-flag {
-    border-width: 4px 4px 0;
-    border-style: solid;
-    border-color: $color-gray-lightest;
+    border: $border-style-lighter-gray;
+    border-bottom-width: 0;
     position: relative;
     height: 100%;
     padding: rem(40px) 10% .5rem;
@@ -74,7 +73,7 @@
     &:before,
     &:after {
       content: "";
-      border-top: $border-style-lightest-gray;
+      border-top: $border-style-lighter-gray;
       width: 53%;
       display: block;
       position: absolute;
@@ -154,7 +153,7 @@
       height: 100%;
       top:0;
       left:0;
-      border: $border-style-lightest-gray;
+      border: $border-style-lighter-gray;
       transition: border-color .5s;
       &:hover {
         border-color:$color-barton-lighter;
@@ -173,7 +172,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
   .block-outline {
-    border: $border-style-lightest-gray;
+    border: $border-style-lighter-gray;
     height: 100%;
     padding: 1.5rem 1.25rem;
     margin: 0 .5rem;
